objects/Veda_IdMatrix__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipLabel>Veda IdMatrix</relationshipLabel>
        <relationshipName>Veda_IdMatrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Reference__c</fullName>
        <label>Client Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_ID__c</fullName>
        <label>Enquiry ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Status__c</fullName>
        <label>Error Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Actor__c</fullName>
        <label>Fault Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code__c</fullName>
        <label>Fault Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_String__c</fullName>
        <label>Fault String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <label>Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Id__c</fullName>
        <label>Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Version__c</fullName>
        <label>Profile Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relates_To__c</fullName>
        <label>Relates To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Verification_Url__c</fullName>
        <label>Self Verification Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Point__c</fullName>
        <label>Total Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>overallOutcome__c</fullName>
        <label>overallOutcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>show_details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>show details</label>
        <type>Checkbox</type>
    </fields>
    <label>Veda IdMatrix</label>
    <nameField>
        <displayFormat>VID-{0000000000}</displayFormat>
        <label>Veda IdMatrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Veda IdMatrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>